# Halide

./: CMakeLists.txt  HalideGenerator.cmake  HalideGenerator.mk  Makefile  README_cmake.md
apps/HelloHexagon/: Makefile  pipeline.cpp  process.cpp
apps/HelloJNI/: HalideBufferJni.cpp  HalideBufferJni.h
apps/HelloJNI/org/halide/runtime/: Buffer.java
apps/bilateral_grid/: CMakeLists.txt  Makefile
apps/blur/: CMakeLists.txt
apps/c_backend/: CMakeLists.txt
apps/camera_pipe/: CMakeLists.txt  Makefile.android  camera_pipe.cpp  camera_pipe.cpp-empty  camera_pipe_generator.cpp  process.cpp  test2-camera-android
apps/conv_layer/: CMakeLists.txt
apps/fft/: complex.h  fft.cpp
apps/glsl/: CMakeLists.txt
apps/hexagon_benchmarks/: Makefile  conv3x3_generator.cpp  process.cpp  process.h
apps/lens_blur/: CMakeLists.txt
apps/linear_algebra/benchmarks/: macros.h
apps/linear_algebra/src/: CMakeLists.txt  blas_l1_generators.cpp  blas_l3_generators.cpp
apps/linear_algebra_gemmlowp/: Makefile
apps/linear_algebra_gemmlowp/benchmarks/: benchmark_data.h  cblas_benchmarks.cpp  eigen_benchmarks  eigen_benchmarks.cpp  gemmlowp_benchmarks.cpp  halide_benchmarks.cpp  macros.h
apps/linear_algebra_gemmlowp/src/: blas_l3_generators.cpp  eigen_interface.h  halide_blas.cpp  halide_blas.h
apps/linear_algebra_gemmlowp/tests/: test_halide_blas.cpp
apps/local_laplacian/: CMakeLists.txt  Makefile  local_laplacian_gen.cpp  local_laplacian_generator.cpp  process.cpp
apps/local_laplacian/jni/: Android.mk  process.cpp
apps/nl_means/: CMakeLists.txt
apps/support/: Makefile.inc
apps/templates/ios/: CMakeLists.txt
apps/templates/osx/: CMakeLists.txt
apps/wavelet/: CMakeLists.txt
bazel/: BUILD  halide.bzl
python_bindings/: run_apps.sh  run_tutorial.sh  setup.py
python_bindings/python/: Func_gpu.h  IROperator.cpp
src/: AllocationBoundsInference.cpp  Associativity.cpp  Associativity.h  AsyncProducers.cpp  AutoSchedule.cpp  BalanceExpressionTrees.cpp  Bounds.cpp  BoundsInference.cpp  CMakeLists.txt  Closure.cpp  Closure.h  CodeGen_C.cpp  CodeGen_C.h  CodeGen_GPU_Host.cpp  CodeGen_Hexagon.cpp  CodeGen_Hexagon.h  CodeGen_Internal.cpp  CodeGen_Internal.h  CodeGen_LLVM.cpp  CodeGen_LLVM.h  CodeGen_OpenCL_Dev.cpp  CodeGen_PTX_Dev.cpp  CodeGen_Renderscript_Dev.cpp  CodeGen_Renderscript_Dev.h  ConciseCasts.h  Definition.cpp  DeviceArgument.cpp  DeviceArgument.h  EarlyFree.cpp  Elf.cpp  Elf.h  EliminateBoolVectors.cpp  Expr.h  ExprUsesVar.h  FactorRVars.cpp  FactorRVars.h  Func.cpp  Func.h  Function.cpp  Generator.cpp  (+57 more)
src/runtime/: HalideRuntime.h  buffer_t.cpp  cache.cpp  cuda.cpp  cuda_opencl_shared.h  gcd_thread_pool.cpp  hexagon_host.cpp  hvx_128.ll  hvx_64.ll  opencl.cpp  openglcompute.cpp  posix_threads.cpp  profiler.cpp  renderscript.cpp  renderscript_dev.ll  runtime_api.cpp  runtime_internal.h  thread_pool.cpp  thread_pool_common.h
src/runtime/hexagon_remote/: Makefile  fake_libadsprpc.cpp  halide_remote.cpp  sim_host.cpp  sim_remote.cpp  thread_pool.cpp
test/: CMakeLists.txt  internal.cpp
test/common/: check_call_graphs.h  expect_death.h
test/correctness/: async.cpp  compute_with.cpp  convolution.cpp  dilate3x3.cpp  gpu_non_contiguous_copy.cpp  gpu_object_lifetime_2.cpp  gpu_object_lifetime_3.cpp  in_place.cpp  inlined_generator.cpp  likely.cpp  loop_carry.cpp  median3x3.cpp  rfactor.cpp  simd_op_check.cpp  store_with.cpp  stream_compaction.cpp  trim_no_ops.cpp
test/error/: float16_t_implicit_downcast.cpp  float16_t_overflow.cpp  float16_t_overflow_int_conv.cpp  require_fail.cpp
test/generator/: async_coroutine_aottest.cpp  async_coroutine_generator.cpp  example_jittest.cpp  selftest_aottest.cpp  selftest_generator.cpp  selftest_impl.h  selftest_jittest.cpp  stubtest_generator.cpp  stubtest_jittest.cpp  stubuser_generator.cpp
test/performance/: async_gpu.cpp  boundary_conditions.cpp
tools/: CMakeLists.txt  GenGen.cpp  halide_libtool.sh
